[package]
name = "tui_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
async-uci = "0.1.0"
clap = "4.3.3"
crossterm = "0.26.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tui = "0.19.0"
tui-textarea = "0.2.0"
